--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Middle School Math Teacher</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Dallas</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Basketball, Volleyball</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Trying to find that out</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Dallas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Learning and applying a new skill, that I can continue to grow with.</p>
     </section>
 
     <footer id="footer">
